# spc

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  __init__.py  requirements.txt  setup.py
include/: spc.h  stats.h  type.h
lexen_spc/: chart.py  plot.py
spc/: chart.py  plot.py
src/: spc.cpp  stats.cpp  type.cpp
tests/: CMakeLists.txt  stats_test.cc
wrapper/golang/: go.mod
wrapper/golang/spc/: spc.go
